# JournAI

./: .env.docker.example  .gitignore  .importlinter  .pre-commit-config.yaml  COMPLETE_SETUP_GUIDE.md  DOCKER_SETUP.md  DOCKER_START.md  ENHANCED_SYSTEM_SUMMARY.md  FRONTEND_SETUP.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SLEEP_MIGRATION_FIX.md  START_PROJECT.md  USAGE_GUIDE.md  add_activities_table.py  backend_api.py  check_activities_migration.py  check_migration_status.py  cleanup_repo.sh  config.env  create_new_frontend.bat  data_manager.py  debug_frontend.bat  direct_db_check.py  docker-compose.yml  enhanced_migration.py  final_activities_check.py  final_error.txt  final_output.txt  fix_and_migrate_activities.py  fix_sleep_table.py  full_reset.sh  garmin_to_postgresql_migration.py  journal_cli.py  migrate_garmin_activities.py  open_dashboard.bat  pyproject.toml  (+33 more)
Diary-AI-BE/: .keep  Dockerfile  README.md  backend_api_enhanced.py  config.env.example  pyproject.toml  requirements.txt  run_migration.py  setup_migration.py
Diary-AI-BE/app/: ARCHITECTURE.md  backend_api_enhanced.py  db.py  dev_requirements.txt  http_helpers.py  model_utils.py  settings.py  setup_python_env.sh  start_enhanced_backend.py  utils.py
Diary-AI-BE/scripts/: __init__.py  add_or_update_hrv_ms.py  backend_api_enhanced.py  backfill_daily_journal.py  data_manager.py  db.py  dev_requirements.txt  enhanced_analytics_engine.py  enhanced_migration.py  http_helpers.py  journal_cli.py  migrate_sleep_events_sqlite_to_postgres.py  model_utils.py  utils.py  (+6 more)
(+365 files in other folders)
