[project]
name = "garmin-health-ai"
version = "0.0.0"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = [
  "frontend/",
  "frontend-react/",
]

[tool.ruff]
line-length = 88
src = ["scripts"]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade (modernize to new Python versions)
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
force-single-line = false
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
exclude = [
  "frontend/",
  "frontend-react/",
]
